src/test/deca/codegen/valid/print/printx_float_var.deca
// Description :
// verifie printx sur une variable float
// Resultat :
// 3.6

{
    float a = 3.6;
    printx(a);
}
