src/test/deca/codegen/invalid/div_by_zero2.deca
// Description:
//  Verif div par zero
//
// Résultat:
//  Erreur

{
float b = 0.0;
float a = 6.0/b;
}
